--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             </div>
                             <div class="product-info">
                                 <h3>Newly Shirt</h3>
-                                <p>by uncart store</p>
+                                <p>By Uncart Store <i class="fa fa-check-circle" aria-hidden="true" style="color: #1DA1F2; font-size: 0.6rem;"></i></p>
                             </div>
                             <div class="product-price">
                                 <p>10% OFF</p>
@@ -125,7 +125,7 @@
                             </div>
                             <div class="product-info">
                                 <h3>Newly Shirt</h3>
-                                <p>by uncart store</p>
+                                <p>By Uncart Store <i class="fa fa-check-circle" aria-hidden="true" style="color: #1DA1F2; font-size: 0.6rem;"></i></p>
                             </div>
                             <div class="product-price">
                                 <p>10% OFF</p>
@@ -140,7 +140,7 @@
                             </div>
                             <div class="product-info">
                                 <h3>Newly Shirt</h3>
-                                <p>by uncart store</p>
+                                <p>By Uncart Store <i class="fa fa-check-circle" aria-hidden="true" style="color: #1DA1F2; font-size: 0.6rem;"></i></p>
                             </div>
                             <div class="product-price">
                                 <p>10% OFF</p>
@@ -155,7 +155,7 @@
                             </div>
                             <div class="product-info">
                                 <h3>Newly Shirt</h3>
-                                <p>by uncart store</p>
+                                <p>By Uncart Store <i class="fa fa-check-circle" aria-hidden="true" style="color: #1DA1F2; font-size: 0.6rem;"></i></p>
                             </div>
                             <div class="product-price">
                                 <p>10% OFF</p>
@@ -170,7 +170,7 @@
                             </div>
                             <div class="product-info">
                                 <h3>Newly Shirt</h3>
-                                <p>by uncart store</p>
+                                <p>By Uncart Store <i class="fa fa-check-circle" aria-hidden="true" style="color: #1DA1F2; font-size: 0.6rem;"></i></p>
                             </div>
                             <div class="product-price">
                                 <p>10% OFF</p>
@@ -185,7 +185,7 @@
                             </div>
                             <div class="product-info">
                                 <h3>Newly Shirt</h3>
-                                <p>by uncart store</p>
+                                <p>By Uncart Store <i class="fa fa-check-circle" aria-hidden="true" style="color: #1DA1F2; font-size: 0.6rem;"></i></p>
                             </div>
                             <div class="product-price">
                                 <p>10% OFF</p>
